More performance for values between -128 and 127 /they are garanteed to have corresponding cached instances.
git-svn-id: https://svn.apache.org/repos/asf/james/imap/trunk@1084527 13f79535-47bb-0310-9956-ffa450edef68